# Multithreaded_Observer

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Jenkinsfile  README.md  compile.sh
include/: observer.h
source/: main.cpp
test/source/: observer_test.cpp
